<resources>
    <string name="msg_generating_test">Generating test sheet %1$d of %2$d</string>
    <string name="msg_student_removed">Student removed</string>
    <string name="msg_cannot_remove_student">Error occurred while trying to remove student</string>
    <string name="menu_student_remove">Remove student</string>
    <string name="export_succeed">Database backup successfully saved to %s</string>
    <string name="export_failed">Database backup failed!</string>
    <string name="import_succeed">Database restore completed successfully</string>
    <string name="import_failed">Database restore failed!</string>
    <string name="grade_min_percent">Percent</string>
	<string name="menu_remove">Remove</string>
    <string name="msg_student_already_exists">Student with this ID already exists</string>
    <string name="button_students">Students</string>
    <string name="msg_cannot_save_student">Cannot save student</string>
    <string name="remove_testresult">Remove test result</string>
    <string name="msg_remove_test_result">Are you sure you want to remove this test result?</string>
    <string name="msg_test_result_removed">Test result has been removed</string>
    <string name="msg_cannot_remove_test_result">Error occurred while trying to delete test result</string>
    <string name="testresults_remove">Remove test result</string>
    <string name="action_confirm">Confirm</string>
    <string name="msg_test_removed">The test has been removed</string>
    <string name="msg_cannot_remove_test">Test cannot be removed due to unknown reason</string>
    <string name="menu_tests_editname">Edit name&#8230;</string>
    <string name="menu_tests_remove">Remove test</string>
    <string name="msg_remove_test">Are you sure you want to remove this test?</string>
    <string name="msg_remove_printed_test">This test has been already printed. It will be impossible to check it after removal. Are you sure?</string>
    <string name="test_variant">Test variant</string>
    <string name="button_choose_test">Choose test</string>
    <string name="scan_test_barcode">Place test barcode under scanner or click \"Choose test\"</string>
    <string name="no_test_selected">No test selected</string>
    <string name="test_identifier">test %1$s variant %2$d</string>
    <string name="msg_new_student_id">Enter new student\'s ID</string>
    <string name="student_id">Student ID</string>
    <string name="msg_edit_not_safe">Editing may void any previously printed test sheets. Are you sure?</string>
    <string name="msg_new_test">New test</string>
    <string name="msg_new_test_name">New test name</string>
    <string name="msg_cannot_create_test">Error while creating test</string>
    <string name="msg_no_correct_answer">No answer is marked as correct. Do you want to save anyway?</string>
    <string name="warning">Warning</string>
    <string name="selected_count">Selected questions:</string>
    <string name="button_addanswer">Add answer</string>
    <string name="new_category">New category&#8230;</string>
    <string name="edit_category">Edit category&#8230;</string>
    <string name="edit_answer">Edit answer&#8230;</string>
    <string name="remove_answer">Remove answer</string>
    <string name="new_category_name">New category name</string>
    <string name="msg_saveerror">Error occurred while saving your changes. Try again</string>
    <string name="menu_questioncategory_selectall">Select all</string>
    <string name="msg_update_category_name">Update category name</string>
    <string name="msg_new_category_name">New category name</string>
    <string name="empty_text">Empty</string>
    <string name="new_question">New question</string>
    <string name="answer_text">The answer</string>
    <string name="app_name">Tests</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_new_test">New test</string>
    <string name="button_ok">OK</string>
    <string name="button_scan">Skanuj test</string>
    <string name="button_create_test">Tests</string>
    <string name="button_view_results">Saved results</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="capture_name">Test scanning</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_questions_edit">Edit question&#8230;</string>
    <string name="menu_questions_remove">Remove question</string>
    <string name="menu_answer_edit">Edit answer&#8230;</string>
    <string name="menu_answer_remove">Remove answer</string>
    <string name="menu_questioncategory_editname">Edit name&#8230;</string>
    <string name="menu_questioncategory_remove">Remove category</string>
    <string name="no_category">No category</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place test area on </string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="button_settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="question_text">Question text</string>
    <string name="question_value">Question value (points)</string>
    <string name="button_next">Next\u00bb</string>
    <string name="switch_shuffle_answers">Shuffle answers</string>
    <string name="shuffle_questions">Shuffle questions</string>
    <string name="button_generate">Generate</string>
    <string name="questions_count">No. of questions on test</string>
    <string name="variants">Number of variants</string>
    <string name="id_length">Length of student ID</string>
    <string name="additional_points">Additional points</string>
    <string name="grade">Grade</string>
    <string name="hint_fullname">Firstname Lastname</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">e-mail@address</string>
    <string name="hint_student_id">Student\'s ID</string>
</resources>