<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.adamp.testchecker.client.CreateTestActivity$QuestionsChooserFragment" >

    <ExpandableListView
        android:id="@+id/questionsList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/selectedCount"
        android:layout_alignParentTop="true"
        android:choiceMode="multipleChoice" >
    </ExpandableListView>

    <TextView
        android:id="@+id/selectedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_new_question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentRight="true"
        android:text="0"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button_new_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/new_question" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_alignBaseline="@+id/selectedCount"
        android:layout_alignBottom="@+id/selectedCount"
        android:layout_toLeftOf="@+id/selectedCount"
        android:text="@string/selected_count" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_next" />

</RelativeLayout>