<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.adamp.testchecker.client.TestResultsActivity"
    tools:ignore="MergeRootFrame" >

    <ListView
        android:id="@+id/listView_questionAnswers"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/textView2"
        android:layout_below="@+id/textView_student_name"
        android:layout_alignParentLeft="true" >

    </ListView>

    <TextView
        android:id="@+id/textView_student_id_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/student_id"
        android:text="@string/student_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView_student_id_caption"
        android:inputType="number"
        android:ems="10" />

    <TextView
        android:id="@+id/textView_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:text="3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_grade"
        android:layout_alignBottom="@+id/textView_grade"
        android:layout_toLeftOf="@+id/textView_grade"
        android:text="@string/grade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_points_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView_student_id_caption"
        android:text="50 / 100 (50%)"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_additionalPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView_grade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText_additionalPoints"
        android:layout_alignParentLeft="true"
        android:text="@string/additional_points"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_student_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText_student_id"
        android:text="Student Name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
